src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>image__c</fullName>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pic__c</fullName>
        <formula>image(image__c, &apos;image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productPage__c</fullName>
        <label>Product Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>publishDate__c</fullName>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
</CustomObject>